# mudskipper

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: mappings.bam  mappings.cram
quantification_testing/: correlation.R  diff.sh  regression_testing.sh
regression/: main.rs  regression_testing.sh
regression/scripts/: correlation.R
src/: annotation.rs  annotations.rs  bam.rs  convert.rs  intersection.rs  lib.rs  main.rs  new_query_bam_records.rs  position.rs  query_bam_records.rs  rad.rs
tests/: NC_002333.2.fna  NC_002333.2.gff  NC_002333.2.gtf  NC_002333.2.sam  NC_002333.2_toTranscriptome_truth.bam  NC_007112.7_1525.gtf  NC_007112.7_1525.sam  NC_007112.7_1631.sam  NC_007112.7_2017.gtf  NC_007112.7_2017.sam  NC_007114.7_12427.gtf  NC_007114.7_12427.sam  NC_007114.7_12427_1.sam  NC_007114.7_12427_2.sam  NC_007114.7_12427_3.sam  NC_007120.7_12427.gtf  NC_007120.7_12427.sam  NC_007131.7_6185.gtf  NC_007131.7_6185.sam  annotations_test.rs  bam_test.rs  missing_mate.sam  missing_mate2.sam  missing_mate3.sam  multi_exons.sam  new_test.rs  not_name_sorted.sam  overhang_cigar_test.rs  paired.sam  query_bam_records_test.rs  single_exon.sam  single_exon2.sam
tests/gencode_v35_index/: gtf.len  gtf.name
tests/regression/: regression_testing.sh
tests/regression/scripts/: correlation.R  simulate_reads.R
