[package]
name = "mudskipper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = { version="*", default-features = false, features=["bzip2", "lzma", "serde_feature"] }
bio = "*"
bio-types = "*"
coitrees = "*"
# for coitrees
fnv = "1.0.3"
log = "*"
env_logger = "*"
indicatif = "*"
linecount = "*"
num_cpus = "1.13.0"
libradicl = "=0.4.1"
clap = "~2.34.0"
